# pyrde

./: .gitmodules  README.md  gen_protoc  pyproject.toml
example/: README.md  example.py  example.txt  pyproject.toml
pyrde/: __init__.py  csv.py  diagnostics.py  reviewdog_pb2.py
